--- a/css/1-base/_vars.sass
+++ b/css/1-base/_vars.sass
@@ -3,10 +3,10 @@
 //
 
 // Fonts
-$font-regular: 'Work Sans', sans-serif
-$font-title: 'Work Sans', sans-serif
+$font-regular: 'DM Sans', sans-serif
+$font-title: 'DM Sans', sans-serif
 
-$font-sora: 'Sora', sans-serif
+$font-sora: 'DM Sans', sans-serif
 
 
 // Basic Colors
