--- a/css/2-components/_content.scss
+++ b/css/2-components/_content.scss
@@ -1,11 +1,14 @@
 .main{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: relative;
+    @include respond-to-min(920){
+        height: 100vh;
+    }
 }
 #video{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: absolute;
     /* background: url(../../img/background.jpg) no-repeat top center; */
     float: left;
@@ -43,27 +46,81 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 30px 0;
     .wrap{
         padding: 0 50px;
     }
     .text-box{
         display: flex;
         flex-wrap: wrap;
+        align-items: flex-start;
         img{
             width: 100%;
             max-width: 286px;
             height: auto;
-            margin-right: 40px;
+            padding-right: 40px;
             margin-bottom: 40px;
-            @include respond-to-min(654){
+            @include respond-to-min(920){
                 margin-bottom: 0;
             }
         }
         .text-wrap{
-            border-left: 4px solid #fff;
-            padding-left: 40px;
+            //border-left: 4px solid #fff;
+                width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            position: relative;
+            @include respond-to-min(920){
+                width: calc(100% - 286px);
+            }
+            &:after { 
+                width: 4px !important;
+                height: 55px;
+                background-color: #fff;
+                position: absolute;
+                top: 0;
+                left: 0;
+                content: '';
+            }
             p{
+                width: 100%;
                 color: #fff;
+                font-size: 17px;
+                padding-left: 40px;
+                margin-top: 0;
+                margin-bottom: 30px;
+                font-style: normal;
+                font-weight: normal;
+                font-size: 17px;
+                line-height: 165.2%;
+                @include respond-to-min(920){
+                    width: 50%;
+                }
+            }
+            .social{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                margin-top: 35px;
+                p{
+
+                }
+                ul{
+                    list-style: none;
+                    display: flex;
+                    margin: 0;
+                    padding: 0;
+                    padding-left: 40px;
+                    li{
+                        margin-right: 20px;
+                        a{
+                            img{
+                                margin: 0;
+                                padding: 0;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
