--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -631,7 +630,7 @@ textarea {
    ========================================================================== */
 body {
   font-size: 16px;
-  font-family: "Work Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   overflow-x: hidden;
 }
 
@@ -794,7 +793,7 @@ a {
 
 .gigantic,
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Work Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-weight: bold;
 }
 
@@ -902,7 +901,7 @@ button {
 }
 
 .btn {
-  font-family: "Work Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   line-height: 12px;
   background: #ffffff;
   border: 2px solid #223C53;
@@ -950,7 +949,7 @@ button {
 form input[type=text],
 form select {
   width: 100%;
-  font-family: "Work Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
   background: #FFFFFF0D 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
   border-radius: 8px;
@@ -971,24 +970,36 @@ form select {
 header {
   width: 100%;
   height: auto;
-  position: fixed;
+  position: relative;
   padding: 50px;
   z-index: 99;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
 }
 
+@media only screen and (min-width: 920px) {
+  header {
+    position: fixed;
+  }
+}
+
 footer {
-  position: fixed;
+  position: relative;
   width: 100%;
   padding: 40px 50px;
   bottom: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+@media only screen and (min-width: 920px) {
+  footer {
+    position: absolute;
+  }
 }
 
 footer ul {
@@ -1010,13 +1021,19 @@ footer p {
 
 .main {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: relative;
+}
+
+@media only screen and (min-width: 920px) {
+  .main {
+    height: 100vh;
+  }
 }
 
 #video {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   /* background: url(../../img/background.jpg) no-repeat top center; */
   float: left;
@@ -1065,6 +1082,7 @@ footer p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 30px 0;
 }
 
 .content .wrap {
@@ -1077,29 +1095,99 @@ footer p {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .content .text-box img {
   width: 100%;
   max-width: 286px;
   height: auto;
-  margin-right: 40px;
+  padding-right: 40px;
   margin-bottom: 40px;
 }
 
-@media only screen and (min-width: 654px) {
+@media only screen and (min-width: 920px) {
   .content .text-box img {
     margin-bottom: 0;
   }
 }
 
 .content .text-box .text-wrap {
-  border-left: 4px solid #fff;
-  padding-left: 40px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  position: relative;
+}
+
+@media only screen and (min-width: 920px) {
+  .content .text-box .text-wrap {
+    width: calc(100% - 286px);
+  }
+}
+
+.content .text-box .text-wrap:after {
+  width: 4px !important;
+  height: 55px;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
 }
 
 .content .text-box .text-wrap p {
+  width: 100%;
   color: #fff;
+  font-size: 17px;
+  padding-left: 40px;
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 165.2%;
+}
+
+@media only screen and (min-width: 920px) {
+  .content .text-box .text-wrap p {
+    width: 50%;
+  }
+}
+
+.content .text-box .text-wrap .social {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 35px;
+}
+
+.content .text-box .text-wrap .social ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  padding-left: 40px;
+}
+
+.content .text-box .text-wrap .social ul li {
+  margin-right: 20px;
+}
+
+.content .text-box .text-wrap .social ul li a img {
+  margin: 0;
+  padding: 0;
 }
 
 .moduloTermos {
@@ -1115,17 +1203,17 @@ footer p {
   color: #FFFFFF;
   opacity: 1;
   padding-top: 25px;
-  font-family: "Work Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
 .moduloTermos h2 {
   color: #83DEDD;
-  font-family: "Work Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
 .moduloTermos ul li {
   color: #fff;
-  font-family: "Work Sans", sans-serif;
+  font-family: "DM Sans", sans-serif;
 }
 
 @media only screen and (min-width: 750px) {
